--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,7 @@
-* {
-  padding: 0;
-  margin: 0;
-  font-family: "Ubuntu", sans-serif;
-}
+@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
 
 body {
-  background-color: #1c1c1c;
-  color: #fff;
-} 
-
-input:focus{
-  box-shadow: 0 0 0 0;
-  border: 0 none;
-  outline: 0;
-} 
+  padding: 0;
+  margin: 0;
+}
