feat: add function to update the time displayed on the card

--- a/src/app/components/card-result/card-result.component.html
+++ b/src/app/components/card-result/card-result.component.html
@@ -3,8 +3,8 @@
 <div class="card">
   <p-card>
     <div class="flex justify-content-between px-2">
-      <p class="text-sm">21:08</p>
-      <p class="text-sm">25/11/2024</p>
+      <p class="text-sm">{{ hours }}</p>
+      <p class="text-sm">{{ date }}</p>
     </div>
 
     <h4 class="flex justify-content-center gap-1 text-xl">
