feat: added city search functionality

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,10 @@
+<app-header (search)="getWeatherData()"></app-header>
+
 <div class="flex justify-content-center align-items-center py-3">
   <app-card-result [cityWeather]="cityWeather"></app-card-result>
 </div>
 <div class="pb-3">
+  @if (cityWeeklyWeather) {
   <app-table-result [list]="cityWeeklyWeather.list"></app-table-result>
+  }
 </div>
