fix: adjust width in search modal

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -5,6 +5,7 @@
       aria-describedby="city-help"
       [(ngModel)]="city"
       [autofocus]="true"
+      class="w-full"
     />
     <small id="city-help"> {{ messsageHelp }} </small>
   </div>
