fix: corrected misspelled word

--- a/src/app/components/search-history/search-history.component.html
+++ b/src/app/components/search-history/search-history.component.html
@@ -4,7 +4,7 @@
     <ng-template pTemplate="header">
       <tr>
         <th class="text-center">Cidade</th>
-        <th class="text-center">Pesqisar</th>
+        <th class="text-center">Pesquisar</th>
         <th class="text-center">Remover</th>
       </tr>
     </ng-template>
