chore: upgrade to Angular 19 and fix broken theme

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
     <ng-template pTemplate="end">
       <p-inputSwitch
         [(ngModel)]="checked"
-        (click)="onThemeChange(checked ? 'dark' : 'light')"
+        (click)="onThemeChange()"
       ></p-inputSwitch>
     </ng-template>
   </p-menubar>
