--- a/src/app/components/table-result/table-result.component.css
+++ b/src/app/components/table-result/table-result.component.css
@@ -1,3 +1,7 @@
+:host ::ng-deep .p-datatable-thead tr th {
+  background-color: var(--p-card-background);
+}
+
 .overflow-container {
   overflow-x: auto;
   width: 100%;
