--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,10 @@ body {
   padding: 0;
   margin: 0;
 }
+:root {
+  --font-family: "Roboto", sans-serif;
+}
+
+body {
+  font-family: var(--font-family);
+}
